# testdev

./: CHANGELOG.md  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: ci.yml
backend/: .env-example  Dockerfile  cmd.sh  pyproject.toml  pytest-report.xml
backend/app/: config.py  main.py  static_values.py
backend/app/routers/activity/: activity.py  models.py
backend/app/routers/activity/tests/: test_activity.py
backend/app/utilities/: get_common.py
infra/: Chart.yaml  values-stage.yaml  values.yaml
infra/templates/backend/: deployment.yaml  route.yaml  secret.yaml
