[tool.poetry]
name = "acts-activity-api"
version = "1.3.0"
description = "ACTS Activity API"
authors = []
readme = "README.md"

[tool.metadata]
title = "ACTS Activity API"
full_description = """
ACTS Activity API

📝 [Source Code](https://gitlab-sjc.cisco.com/cxInnovations/iad/acts/acts-activity)   
🐞 [Issues](https://gitlab-sjc.cisco.com/cxInnovations/iad/acts/acts-activity/issues)  
"""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = {version = "0.23.2", extras = ["standard"]}
gunicorn = "^21.2.0"
python-dotenv = "1.0.0"
pymongo = "4.5.0"
requests = "2.31.0"
toml = "^0.10.2"
httpx = "0.24.1"
pydantic-settings = "^2.0.3"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
isort = "5.12.0"
flake8 = "^6.1.0"
pytest = "7.4.0"
coverage = "7.3.0"
mypy = "1.5.1"
types-requests = "2.31.0.2"
mongomock = "^4.1.2"
setuptools = "68.1.2"
requests-mock = "^1.11.0"
autoflake = "2.2.0"

[tool.poetry.group.prod.dependencies]
appdynamics = "23.7.0.6112"

[tool.black]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--junitxml=pytest-report.xml"

[tool.pytest.plugins]
addopts = ["--junitxml=pytest-report.xml"]